# daily_stock_report

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  HANDOFF-2026-06-03-next-session.md  handover.md  main.py  pyproject.toml
.agent-memory/: report-diet-requirements-verbatim.md
config/: holdings.example.yaml  screener.yaml  screener_us.yaml
docs/: HANDOFF-2026-06-02-자율작업.md  HANDOFF-2026-06-03-멀티작업.md  HANDOFF-2026-06-04-멀티세션.md  HANDOFF_FINAL.md  index.html
scripts/: analyze_A.py  analyze_C_endstage.py  analyze_D_reversal.py  analyze_buypoints.py  backtest_60min_stop.py  backtest_A.py  backtest_A_multi.py  backtest_C.py  backtest_atr_stop.py  backtest_pullback.py  backtest_top3.py  backtest_us.py  build_dashboard.py  check_holdings.py  compare_A_orpath.py  compare_C_endstage.py  compare_C_stop.py  compare_surge_cap.py  diag_A.py  diag_C_reentry.py  diag_D_oversold.py  diag_format_offline.py  diag_kr_premarket_dry.py  diag_premarket.py  diag_render_smoke.py  notify_log.py  report_manual_holdings.py  run_us_screening.py  scan_C.py  scan_D.py  scan_signals.py  send_screen_full.py  send_screen_test.py  signal_chart.py  simulate.py  simulate_daily.py  simulate_daily_A.py  simulate_daily_C.py  smoke_paper_order.py  stock-report.service  (+6 more)
src/: logging_setup.py
tests/: conftest.py  test_alerts.py  test_analyzer_fallback.py  test_auto_trader.py  test_bot_auth.py  test_closing_bets.py  test_coil_section.py  test_coil_squeeze.py  test_coin_report.py  test_dart_source.py  test_e_strategy.py  test_flows_summary.py  test_holdings_cross.py  test_holiday_calendar.py  (+49 more)
(+1822 files in other folders)
