[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-insight-bot"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "python-telegram-bot[job-queue]>=21.0",
    "google-genai>=0.8.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.4.0",
    "apscheduler>=3.10.0",
    "PyQt5>=5.15",
    "pykiwoom>=0.1.5",
]

[project.optional-dependencies]
# module-2: pandas + pandas-ta (requires pandas<3 for pandas-ta compat)
# install with: pip install "pandas>=2.2.0,<3" "pandas-ta==0.3.14b0"
analysis = [
    "pandas>=2.2.0,<3",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
